--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,7 +17,7 @@ spring:
     timeout-per-shutdown-phase: 1h
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.17.0.1:3306/midai
+    url: jdbc:mysql://172.17.0.1:3306/carjini
     username: root
   data:
     redis:
@@ -38,8 +38,6 @@ logging:
     org.hibernate.orm.jdbc.bind: INFO
     org.hibernate.orm.jdbc.extract: INFO
     org.springframework.transaction.interceptor: INFO
-custom:
-  webhook-url: https://api.hoit.my
   site:
     name: "My Site Prod"
 management:
