--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,8 +69,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/mid-ai/hoit_be:${{ needs.makeTagAndRelease.outputs.tag_name }}
-            ghcr.io/mid-ai/hoit_be:latest
+            ghcr.io/CarJini/BE:${{ needs.makeTagAndRelease.outputs.tag_name }}
+            ghcr.io/CarJini/BE:latest
   deploy:
     runs-on: ubuntu-latest
     needs: [ buildImageAndPush ]
@@ -82,11 +82,11 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          instance-ids: "i-0343368f3ddfc0e08"
+          instance-ids: "i-09c566788bb906964"
           working-directory: /
           comment: Deploy
           command: |
             mkdir -p /dockerProjects/blog
-            curl -o /dockerProjects/blog/zere_downtime_deploy.py https://raw.githubusercontent.com/MID-AI/Hoit_BE/main/infraScript/zere_downtime_deploy.py
+            curl -o /dockerProjects/blog/zere_downtime_deploy.py https://raw.githubusercontent.com/CarJini/BE/main/infraScript/zere_downtime_deploy.py
             chmod +x /dockerProjects/blog/zere_downtime_deploy.py
             python3 /dockerProjects/blog/zere_downtime_deploy.py
