--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   client:
-    url: https://www.hoit.my
+    url: http://localhost:5173
 server:
   port: 8090
   shutdown: graceful
@@ -13,7 +13,7 @@ spring:
     timeout-per-shutdown-phase: 1h
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/midai
+    url: jdbc:mysql://127.0.0.1:3306/carjini
     username: root
     password: 1234
   security:
