fix: refresh token 재발급 해결, 중ë³차량 선택 중복 데이터 생성 해결

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,11 @@ dependencies {
 
 	//
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    //firebase 설정
+	implementation("com.google.firebase:firebase-admin:7.1.1")
+
+	//몽고디비 설정
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 }
 
