--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
           google:
             redirect-uri: http://localhost:8090/auth/google/redirect
   data:
+    mongodb:
+      host: 127.0.0.1
+      post: 27017
     redis:
       host: 127.0.0.1
       port: 6379
